--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.22.1",
+    "@vercel/postgres": "^0.7.2",
     "clsx": "^2.1.0",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^33.6.1"
   },
   "devDependencies": {
     "@types/node": "20.11.28",
