--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.10.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
